--- a/examples/index.html
+++ b/examples/index.html
@@ -11,7 +11,7 @@
         <script src="../jquery.mediaquerieswatcher.js/jquery.mediaquerieswatcher.js"></script>
         <script type="text/javascript">
             $(document).ready(function(){
-              $.mediaquerieswatcher({lib:'bootstrap3'});
+              $.mediaquerieswatcher({lib:'bootstrap3',position:'bottom-right'});
             }); 
         </script>
     </body>
