--- a/examples/index.html
+++ b/examples/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="jquery.ui.custom.js" charset="utf-8"></script>
         <script src="../jquery.mediaquerieswatcher.js/jquery.mediaquerieswatcher.js"></script>
         <script type="text/javascript">
             $(document).ready(function(){
