--- a/examples/gamepixtest/homePage-loggedIn.html
+++ b/examples/gamepixtest/homePage-loggedIn.html
@@ -223,11 +223,11 @@
     $(document).foundation();
   </script>
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-        
+             <script src="../jquery.ui.custom.js" charset="utf-8"></script>
         <script src="../../jquery.mediaquerieswatcher.js/jquery.mediaquerieswatcher.js"></script>
         <script type="text/javascript">
             $(document).ready(function(){
-              $.mediaquerieswatcher({position:'top-right'});
+              $.mediaquerieswatcher({positioning: "draggable",position:'top-right'});
             }); 
         </script>
 </body>
