--- a/examples/index.html
+++ b/examples/index.html
@@ -15,7 +15,7 @@
     <script type="text/javascript">
 
     $(document).ready(function(){
-      $.mediaquerieswatcher();
+      $.mediaquerieswatcher({lib:'bootstrap'});
         
         
     }); 
