--- a/examples/index.html
+++ b/examples/index.html
@@ -14,11 +14,16 @@
               $.mediaquerieswatcher({lib:'foundation5',position:'top-left'});
       
     </pre>
+    <h3>Needs jquery and jquery.ui</h3>
+    <pre>
+            https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js
+            https://code.jquery.com/ui/1.11.3/jquery-ui.min.js
+    </pre>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="jquery.ui.custom.js" charset="utf-8"></script>
-        <script src="../jquery.mediaquerieswatcher.js/jquery.mediaquerieswatcher.js"></script>
-        <script type="text/javascript">
+        
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://code.jquery.com/ui/1.11.3/jquery-ui.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../jquery.mediaquerieswatcher.js/jquery.mediaquerieswatcher.js"></script><script type="text/javascript">
             $(document).ready(function(){
               $.mediaquerieswatcher({lib:'foundation5',position:'top-left'});
               //$.mediaquerieswatcher({lib:'bootstrap3',position:'bottom-right'});
