grunt up, livereload too

--- a/examples/index.html
+++ b/examples/index.html
@@ -3,11 +3,20 @@
     <head>
         <meta charset="UTF-8" />
         <title> </title>
+        <link rel="stylesheet" href="http://cdn.foundation5.zurb.com/foundation.css">
         <link rel="stylesheet" href="../jquery.mediaquerieswatcher.js/jquery.mediaquerieswatcher.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles/styles.min.css">
     </head>
 
     <body>
+
+
+    <div class="container small-12 small-centered">
+
+        <div class="small-8 small-offset-2">asdasdasd</div>
+
+    </div>
+
         <h1>This floating panel is the plugin and is generated with this line of code</h1>
     <pre>
         
