added github star

--- a/examples/index.html
+++ b/examples/index.html
@@ -12,12 +12,16 @@
 
     <!-- HEADER -->
     <section class="small-12 small-centered container">
+
         
         <header class="small-8 small-offset-2 small-centered container-header">
             <div class="header">
                 <h1>Media Queries Watcher</h1>
                 <div class="divider"></div>
                 <p class="small-6 small-offset-3">This plugin generates a floating panel that help you track your breakpoints in a second! You can drag it everywhere you want or stick it to the top of the page.</p>
+                <div class="small-12 text-center github-share">
+                    <iframe src="https://ghbtns.com/github-btn.html?user=negativo&repo=jquery.mediaquerieswatcher.js&type=star&count=true&size=large" frameborder="0" scrolling="0" width="120px" height="30px"></iframe>
+                </div>
             </div>
         </header>
 
@@ -38,7 +42,12 @@
 
         </section>
 
-    </section>
+        <footer>
+            asdasd
+        </footer>
+
+    </section><!-- MAIN CONTAINER -->
+
         
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="https://code.jquery.com/ui/1.11.3/jquery-ui.min.js" type="text/javascript" charset="utf-8"></script>
