added footer and dummy text around

--- a/examples/index.html
+++ b/examples/index.html
@@ -30,7 +30,11 @@
             <h3>Installation</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque possimus accusantium vitae beatae voluptatum rerum quis, assumenda sit, blanditiis debitis adipisci dolorum praesentium nisi iure. Iure eveniet, possimus rerum consequatur.</p>
             
-            <pre>   $.mediaquerieswatcher({lib:'foundation5',position:'top-left'});</pre>
+            <pre>   $.mediaquerieswatcher();</pre>
+
+            <h3>Options</h3>
+            
+            <pre>   $.mediaquerieswatcher({<br>&#9;lib:'foundation5',<br>&#9;position:'top-left'<br>&#9;});</pre>
 
             <h3>Depencies</h3>
             <p> jQuery & jQuery UI</p>
@@ -43,7 +47,11 @@
         </section>
 
         <footer>
-            asdasd
+            <div class="small-8 small-offset-2 small-centered">
+                <div class="left">Project License</div>
+                <div class="right">Project Author</div>
+                <div class="clearfix"></div>
+            </div>
         </footer>
 
     </section><!-- MAIN CONTAINER -->
