--- a/examples/index.html
+++ b/examples/index.html
@@ -34,15 +34,13 @@
 
             <h3>Options</h3>
             
-            <pre>   $.mediaquerieswatcher({<br>&#9;lib:'foundation5',<br>&#9;position:'top-left'<br>&#9;});</pre>
+            <pre>    $.mediaquerieswatcher({<br>&#9;lib:'foundation5',<br>&#9;position:'top-left'<br>    });</pre>
 
             <h3>Depencies</h3>
             <p> jQuery & jQuery UI</p>
             
-<pre>
-    https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js
-    https://code.jquery.com/ui/1.11.3/jquery-ui.min.js
-</pre>
+            <pre><br>    https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js<br>    https://code.jquery.com/ui/1.11.3/jquery-ui.min.js
+            </pre>
 
         </section>
 
